changed errored address

--- a/404.html
+++ b/404.html
@@ -77,37 +77,38 @@
                 </li>
 
                 <li>
-                    <a href="http://alexanderussell.org" ">Alex Who?</a>
-      </li>
-    
-    </ul>
-  </nav>
-</header>
+                    <a href="https://jennybeblog.github.io">Who?</a>
+                </li>
 
-      <main>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
         <div class="articles full-width ">
-  <article>
-    <h1>404: Page not found</h1>
-    <p>Sorry, we’ve misplaced that URL or it’s pointing to something that doesn’t exist. <a href="/jennybeblog.github.io/ ">Head back home</a> to try finding it again.</p>
+            <article>
+                <h1>404: Page not found</h1>
+                <p>Sorry, we’ve misplaced that URL or it’s pointing to something that doesn’t exist. <a href="/jennybeblog.github.io/ ">Head back home</a> to try finding it again.</p>
 
 
-  </article>
-</div>
-      </main>
+            </article>
+        </div>
+    </main>
 
-      <footer class="footer tc ">
-  <small>
+    <footer class="footer tc ">
+        <small>
     &copy; 2016 Alex Russell
     <br>
     Powered by <a href="http://jekyllrb.com ">Jekyll</a> using the <a href="http://alexanderussell.org/jennybeblog.github.io/ ">Progress Theme</a>.
   </small>
-</footer>
+    </footer>
 
 
 
     <script src="/jennybeblog.github.io/js/jquery-2.1.4.js "></script>
     <script src="/jennybeblog.github.io/js/main.js "></script>
 
-    
-  </body>
+
+</body>
+
 </html>
