--- a/about/index.html
+++ b/about/index.html
@@ -77,61 +77,63 @@
                 </li>
 
                 <li>
-                    <a href="http://alexanderussell.org" ">Alex Who?</a>
-      </li>
-    
-    </ul>
-  </nav>
-</header>
+                    <a href="https://jennybeblog.github.io">Who?</a>
+                </li>
 
-      <main>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
         <div class="articles full-width ">
-  <article>
-    <h1>About</h1>
-    <p>Progress was built by <a href="http://alexanderussell.org ">Alexander Russell</a> and inspired by <a href="https://codyhouse.co/ ">Cody House’s</a> <a href="https://codyhouse.co/demo/reading-progress-indicator/index.html
+            <article>
+                <h1>About</h1>
+                <p>Progress was built by <a href="https://jennybeblog.github.io">Alexander Russell</a> and inspired by <a href="https://codyhouse.co/ ">Cody House’s</a> <a href="https://codyhouse.co/demo/reading-progress-indicator/index.html
                         ">Reading Progress Indicator</a>. The folks over at Cody House are pretty fantastic and are making some awesome things. They’re also super responsive to comments, so head on over there and check out what they’ve been doing.</p>
 
-<p>Progress features quick and simple environment is set up so users can input all the necesarry info in the config file and start blogging. Further reiterations are in progress to turn this into a Wordpress theme or make it fully editable with Cloudcannon CMS. I cannot let you resell this unless you <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#097;&#108;&#101;&#120;&#064;&#099;&#111;&#108;&#108;&#101;&#099;&#116;&#105;&#118;&#101;&#108;&#121;&#109;&#097;&#100;&#101;&#046;&#099;&#111;&#109; ">contact me</a></p>
+                <p>Progress features quick and simple environment is set up so users can input all the necesarry info in the config file and start blogging. Further reiterations are in progress to turn this into a Wordpress theme or make it fully editable
+                    with Cloudcannon CMS. I cannot let you resell this unless you <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#097;&#108;&#101;&#120;&#064;&#099;&#111;&#108;&#108;&#101;&#099;&#116;&#105;&#118;&#101;&#108;&#121;&#109;&#097;&#100;&#101;&#046;&#099;&#111;&#109; ">contact me</a></p>
 
-<p>If you’d like give credit somewhere on your blog or tweet a shout out to
-<a href="https://twitter.com/alexanderussell ">@alexanderussell</a>, that would be pretty sweet.</p>
+                <p>If you’d like give credit somewhere on your blog or tweet a shout out to
+                    <a href="https://twitter.com/alexanderussell ">@alexanderussell</a>, that would be pretty sweet.</p>
 
-<p>If you feel like donating — <a href="https://flattr.com/profile/alexanderussell ">Give it a thought.</a></p>
+                <p>If you feel like donating — <a href="https://flattr.com/profile/alexanderussell ">Give it a thought.</a></p>
 
-<hr />
+                <hr />
 
-<h2 id="basic-setup ">Basic Setup</h2>
+                <h2 id="basic-setup ">Basic Setup</h2>
 
-<ol>
-  <li><a href="http://jekyllrb.com ">Install Jekyll</a> if you haven’t already.</li>
-  <li>Download this bad boy.</li>
-  <li>Fork the <a href="http://github.com/alexanderussell/jennybeblog.github.io/ ">Progress repo</a></li>
-  <li>Twerk it out so it’s just for you.</li>
-  <li>???</li>
-  <li>Profit</li>
-</ol>
+                <ol>
+                    <li><a href="http://jekyllrb.com ">Install Jekyll</a> if you haven’t already.</li>
+                    <li>Download this bad boy.</li>
+                    <li>Fork the <a href="http://github.com/alexanderussell/jennybeblog.github.io/ ">Progress repo</a></li>
+                    <li>Twerk it out so it’s just for you.</li>
+                    <li>???</li>
+                    <li>Profit</li>
+                </ol>
 
-<p>Have questions or suggestions? Feel free to <a href="https://github.com/alexanderussell/jennybeblog.github.io/issues/new ">open an issue on GitHub</a> or <a href="https://twitter.com/alexanderussell ">ask me on Twitter</a>.</p>
+                <p>Have questions or suggestions? Feel free to <a href="https://github.com/alexanderussell/jennybeblog.github.io/issues/new ">open an issue on GitHub</a> or <a href="https://twitter.com/alexanderussell ">ask me on Twitter</a>.</p>
 
-<p>Thanks!</p>
+                <p>Thanks!</p>
 
-  </article>
-</div>
-      </main>
+            </article>
+        </div>
+    </main>
 
-      <footer class="footer tc ">
-  <small>
+    <footer class="footer tc ">
+        <small>
     &copy; 2016 Alex Russell
     <br>
     Powered by <a href="http://jekyllrb.com ">Jekyll</a> using the <a href="http://alexanderussell.org/jennybeblog.github.io/ ">Progress Theme</a>.
   </small>
-</footer>
+    </footer>
 
 
 
     <script src="/jennybeblog.github.io/js/jquery-2.1.4.js "></script>
     <script src="/jennybeblog.github.io/js/main.js "></script>
 
-    
-  </body>
+
+</body>
+
 </html>
