--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <header class="header">
         <h1>
-            <a href="http://alexanderussell.github.io/progress-for-jekyll//" title="Home">Progress</a>
+            <a href="https://jennybeblog.github.io/" title="Home">Progress</a>
         </h1>
         <nav>
             <ul>
